--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/antd": "^1.0.0",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
