--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/antd": "^1.0.0",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
+    "firebase": "^9.20.0",
+    "firebase-admin": "^11.7.0",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
