--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "firebase": "^9.20.0",
     "firebase-admin": "^11.7.0",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
